force-app/main/default/objects/PullDownList__mdt/PullDownList__mdt.object-meta.xml
<CustomObject>
    <description>MACTUS・MELFLEXプルダウンリスト</description>
    <label>プルダウンリスト</label>
</CustomObject>