force-app/main/default/objects/PullDownList__mdt/fields/DisplayLocation__c.field-meta.xml
<CustomField>
    <fullName>DisplayLocation__c</fullName>
    <label>表示箇所</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>