force-app/main/default/objects/PullDownList__mdt/fields/ListValue__c.field-meta.xml
<CustomField>
    <fullName>ListValue__c</fullName>
    <label>プルダウンリスト値</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>