force-app/main/default/objects/PullDownList__mdt/listViews/CustomView.listView-meta.xml
<ListView>
    <fullName>CustomView</fullName>
    <columns>MajorClassification__c</columns>
    <columns>MinorClassification__c</columns>
    <columns>DisplayLocation__c</columns>
    <columns>DisplayOrder__c</columns>
    <columns>ListValue__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <filterScope>Everything</filterScope>
    <label>カスタマイズビュー</label>
    <language>ja</language>
</ListView>